--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,7 +12,7 @@
 body {
   font-family: "Open Sans", sans-serif;
   background-color: #040404;
-  color: #fff;
+  color: #000;
   position: relative;
   background: transparent;
 }
@@ -20,7 +20,7 @@ body {
 body::before {
   content: "";
   position: fixed;
-  background: #040404 url("") top right no-repeat;
+  background: #F4F4F9 url("") top right no-repeat;
   background-size: cover;
   left: 0;
   right: 0;
@@ -36,12 +36,12 @@ body::before {
 }
 
 a {
-  color: #18d26e;
+  color: #5271ff;
   text-decoration: none;
 }
 
 a:hover {
-  color: #35e888;
+  color: #5271ff;
   text-decoration: none;
 }
 
@@ -82,7 +82,7 @@ h6 {
 
 #header h1 a,
 #header h1 a:hover {
-  color: #fff;
+  color: #000000;
   line-height: 1;
   display: inline-block;
 }
@@ -90,12 +90,12 @@ h6 {
 #header h2 {
   font-size: 24px;
   margin-top: 20px;
-  color: rgba(255, 255, 255, 0.8);
+  color: #000000;
 }
 
 #header h2 span {
   color: #fff;
-  border-bottom: 2px solid #18d26e;
+  border-bottom: 2px solid #5271ff;
   padding-bottom: 6px;
 }
 
@@ -124,7 +124,7 @@ h6 {
 }
 
 #header .social-links a:hover {
-  background: #18d26e;
+  background: #5271ff;
 }
 
 @media (max-width: 992px) {
@@ -155,7 +155,7 @@ h6 {
   left: 0;
   top: 0;
   right: 0;
-  background: rgba(0, 0, 0, 0.9);
+  background: #F4F4F9;
 }
 
 #header.header-top .social-links,
@@ -223,7 +223,7 @@ h6 {
   font-family: "Courier New", Courier;
   font-size: 16px;
   font-weight: 400;
-  color: rgba(255, 255, 255, 0.7);
+  color: #000;
   white-space: nowrap;
   transition: 0.3s;
 }
@@ -242,7 +242,7 @@ h6 {
   height: 2px;
   bottom: -4px;
   left: 0;
-  background-color: #18d26e;
+  background-color: #5271ff;
   visibility: hidden;
   width: 0px;
   transition: all 0.3s ease-in-out 0s;
@@ -259,14 +259,14 @@ h6 {
 .navbar .active,
 .navbar .active:focus,
 .navbar li:hover>a {
-  color: #fff;
+  color: #000;
 }
 
 /**
 * Mobile Navigation 
 */
 .mobile-nav-toggle {
-  color: #fff;
+  color: #000000;
   font-size: 28px;
   cursor: pointer;
   display: none;
@@ -294,7 +294,7 @@ h6 {
   right: 0;
   left: 0;
   bottom: 0;
-  background: rgba(0, 0, 0, 0.9);
+  background: #F4F4F9;
   transition: 0.3s;
   z-index: 999;
   margin-top: 0;
@@ -355,7 +355,7 @@ section.section-show {
 }
 
 section .container {
-  background: rgba(0, 0, 0, 0.9);
+  background: #F4F4F9;
   padding: 30px;
 }
 
@@ -377,7 +377,7 @@ section .container {
   margin: 0 0 20px 0;
   letter-spacing: 2px;
   text-transform: uppercase;
-  color: #aaaaaa;
+  color: #626567;
   font-family: "Poppins", sans-serif;
 }
 
@@ -386,7 +386,7 @@ section .container {
   width: 120px;
   height: 1px;
   display: inline-block;
-  background: #4ceb95;
+  background: #5271ff;
   margin: 4px 10px;
 }
 
@@ -397,7 +397,7 @@ section .container {
   font-weight: 700;
   text-transform: uppercase;
   font-family: "Poppins", sans-serif;
-  color: #fff;
+  color: #000;
 }
 
 /*--------------------------------------------------------------
@@ -406,7 +406,7 @@ section .container {
 .about-me .content h3 {
   font-weight: 700;
   font-size: 26px;
-  color: #18d26e;
+  color: #5271ff;
 }
 
 .about-me .content ul {
@@ -427,7 +427,7 @@ section .container {
 .about-me .content ul i {
   font-size: 16px;
   margin-right: 5px;
-  color: #18d26e;
+  color: #5271ff;
   line-height: 0;
 }
 
@@ -458,7 +458,7 @@ section .container {
   font-size: 24px;
   background: rgba(255, 255, 255, 0.1);
   padding: 12px;
-  color: #18d26e;
+  color: #5271ff;
   border-radius: 50px;
   line-height: 0;
 }
@@ -494,11 +494,11 @@ section .container {
   display: block;
   font-weight: 600;
   font-family: "Poppins", sans-serif;
-  color: #fff;
+  color: #000;
 }
 
 .skills .progress .skill i {
-  color: #18d26e;
+  color: #5271ff;
   line-height: 0;
 }
 
@@ -515,7 +515,7 @@ section .container {
   width: 1px;
   height: 10px;
   transition: 0.9s;
-  background-color: #18d26e;
+  background-color: #5271ff;
 }
 
 /*--------------------------------------------------------------
@@ -626,7 +626,7 @@ section .container {
 }
 
 .testimonials .swiper-pagination .swiper-pagination-bullet-active {
-  background-color: #18d26e;
+  background-color: #5271ff;
 }
 
 /*--------------------------------------------------------------
@@ -637,7 +637,7 @@ section .container {
   font-weight: 700;
   margin-top: 20px;
   margin-bottom: 20px;
-  color: #fff;
+  color: #000;
 }
 
 .resume .resume-item {
@@ -653,7 +653,7 @@ section .container {
   font-weight: 600;
   text-transform: uppercase;
   font-family: "Poppins", sans-serif;
-  color: #18d26e;
+  color: #5271ff;
   margin-bottom: 10px;
 }
 
@@ -686,8 +686,8 @@ section .container {
   border-radius: 50px;
   left: -9px;
   top: 0;
-  background: #18d26e;
-  border: 2px solid #18d26e;
+  background: #5271ff;
+  border: 2px solid #5271ff;
 }
 
 /*--------------------------------------------------------------
@@ -704,7 +704,7 @@ section .container {
   margin: 0 auto;
   width: 64px;
   height: 64px;
-  background: #18d26e;
+  background: #5271ff;
   border-radius: 5px;
   transition: all 0.3s ease-out 0s;
   display: flex;
@@ -749,8 +749,8 @@ section .container {
 }
 
 .services .icon-box:hover {
-  background: #18d26e;
-  border-color: #18d26e;
+  background: #5271ff;
+  border-color: #5271ff;
 }
 
 .services .icon-box:hover .icon {
@@ -758,11 +758,11 @@ section .container {
 }
 
 .services .icon-box:hover .icon i {
-  color: #18d26e;
+  color: #5271ff;
 }
 
 .services .icon-box:hover .icon::before {
-  background: #35e888;
+  background: #5271ff;
 }
 
 .services .icon-box:hover h4 a,
@@ -803,7 +803,7 @@ section .container {
 
 .portfolio #portfolio-flters li:hover,
 .portfolio #portfolio-flters li.filter-active {
-  background: #18d26e;
+  background: #5271ff;
 }
 
 .portfolio #portfolio-flters li:last-child {
@@ -903,7 +903,7 @@ section .container {
 }
 
 .portfolio .portfolio-wrap .portfolio-links a:hover {
-  color: #63eda3;
+  color: #5271ff;
 }
 
 .portfolio .portfolio-wrap:hover::before {
@@ -1006,7 +1006,7 @@ section .container {
 }
 
 .portfolio-details .swiper-pagination .swiper-pagination-bullet-active {
-  background-color: #18d26e;
+  background-color: #5271ff;
 }
 
 /*--------------------------------------------------------------
@@ -1021,7 +1021,7 @@ section .container {
 
 .contact .info-box i.bx {
   font-size: 24px;
-  color: #18d26e;
+  color: #5271ff;
   border-radius: 50%;
   padding: 14px;
   float: left;
@@ -1030,14 +1030,14 @@ section .container {
 
 .contact .info-box h3 {
   font-size: 20px;
-  color: rgba(255, 255, 255, 0.5);
+  color: #000;
   font-weight: 700;
   margin: 10px 0 8px 68px;
 }
 
 .contact .info-box p {
   padding: 0;
-  color: #fff;
+  color: #000;
   line-height: 24px;
   font-size: 14px;
   margin: 0 0 0 68px;
@@ -1051,14 +1051,14 @@ section .container {
 .contact .info-box .social-links a {
   font-size: 18px;
   display: inline-block;
-  color: #fff;
+  color: #000;
   line-height: 1;
   margin-right: 12px;
   transition: 0.3s;
 }
 
 .contact .info-box .social-links a:hover {
-  color: #18d26e;
+  color: #5271ff;
 }
 
 .contact .php-email-form {
@@ -1082,7 +1082,7 @@ section .container {
 .contact .php-email-form .sent-message {
   display: none;
   background: rgba(255, 255, 255, 0.08);
-  background: #18d26e;
+  background: #5271ff;
   text-align: center;
   padding: 15px;
   font-weight: 600;
@@ -1102,7 +1102,7 @@ section .container {
   width: 24px;
   height: 24px;
   margin: 0 10px -6px 0;
-  border: 3px solid #18d26e;
+  border: 3px solid #5271ff;
   border-top-color: #eee;
   animation: animate-loading 1s linear infinite;
 }
@@ -1144,7 +1144,7 @@ section .container {
 }
 
 .contact .php-email-form button[type=submit] {
-  background: #18d26e;
+  background: #5271ff;
   border: 0;
   padding: 10px 30px;
   color: #fff;
@@ -1153,7 +1153,7 @@ section .container {
 }
 
 .contact .php-email-form button[type=submit]:hover {
-  background: #15bb62;
+  background: #5271ff;
 }
 
 @keyframes animate-loading {
@@ -1190,7 +1190,7 @@ section .container {
 }
 
 .credits a {
-  color: #18d26e;
+  color: #5271ff;
   transition: 0.3s;
 }
 
