--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -889,22 +889,6 @@ section .container {
   margin: 0;
 }
 
-.portfolio .portfolio-wrap .portfolio-links {
-  text-align: center;
-  z-index: 4;
-}
-
-.portfolio .portfolio-wrap .portfolio-links a {
-  color: #fff;
-  margin: 0 2px;
-  font-size: 28px;
-  display: inline-block;
-  transition: 0.3s;
-}
-
-.portfolio .portfolio-wrap .portfolio-links a:hover {
-  color: #5271ff;
-}
 
 .portfolio .portfolio-wrap:hover::before {
   top: 0;
@@ -933,7 +917,7 @@ section .container {
 --------------------------------------------------------------*/
 .portfolio-details {
   padding-top: 40px;
-  background: rgba(0, 0, 0, 0.8);
+  background: #F4F4F9;
   position: fixed;
   left: 0;
   right: 0;
@@ -953,7 +937,7 @@ section .container {
   padding-bottom: 40px;
   object-fit: contain;
   max-width: 100%;
-  heigh: auto
+  height: auto
 }
 
 .portfolio-details .portfolio-title {
@@ -991,22 +975,6 @@ section .container {
   .portfolio-details .portfolio-info {
     padding-top: 20px;
   }
-}
-
-.portfolio-details .swiper-pagination {
-  margin-top: 20px;
-  position: relative;
-}
-
-.portfolio-details .swiper-pagination .swiper-pagination-bullet {
-  width: 12px;
-  height: 12px;
-  opacity: 1;
-  background-color: rgba(255, 255, 255, 0.3);
-}
-
-.portfolio-details .swiper-pagination .swiper-pagination-bullet-active {
-  background-color: #5271ff;
 }
 
 /*--------------------------------------------------------------
